Fix signal-quality bugs in iteration metrics and leak checks
Correctness fixes surfaced during a code review of the harness core:

- Measure iteration latency before the 25ms grace sleep in
  Agent.endIteration(), so the grace period no longer inflates every
  latency reading (previously ~25ms floor on all iterations).
- Guard against a double endIteration() on the failure path in
  GenericRunner: only re-run it when executeIteration() itself threw,
  never when endIteration() was the source of the failure.
- Report per-Timer daemon status via reflection on the Timer's thread
  field instead of returning the first Timer-* thread found, which was
  wrong whenever multiple timers existed.
- Add opt-in -Dclosurejvm.heap.gcBeforeMeasure to GC before the heap
  baseline and end-of-iteration reading, so heap delta reflects
  retention rather than allocation noise (off by default; GC runs
  before the latency clock starts).
- Repo hygiene: stop tracking tomcat-war/build artifacts; drop the
  stale "Replace OWNER/REPO" badge comment.

Docs: record the soak result and these fixes in README/TODO/agents.md.

Validated with a 10,000-iteration soak (runSoakProper): 10k/10k clean,
no leaks or invariant violations; latency p50=1ms, p99=2ms, max=15ms
(warmup) after the grace-sleep fix; thread count steady at 7.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_018kqCb2ZpmgPcLhjLo5ZbNx